- Reldens - v4.0.0 - Fix multiple skills alignment.

--- a/theme/default/css/skills.scss
+++ b/theme/default/css/skills.scss
@@ -54,3 +54,7 @@
     bottom: 66px;
     left: 202px;
 }
+
+.skills-container.action-buttons {
+    flex-direction: row;
+}
